# diko

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  TODOS.md  railway.toml
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-04-08T14-47-39-121Z.yml  page-2026-04-08T14-51-41-384Z.yml  page-2026-04-08T14-52-07-104Z.yml  page-2026-04-08T14-52-34-601Z.yml  page-2026-04-08T14-52-45-361Z.yml
diko/backend/: backfill_categories.py  categorizer.py  database.py  downloader.py  exporter.py  keychain.py  main.py  models.py  pyproject.toml  requirements.txt  transcriber.py  transcript_worker.py  youtube_api.py
diko/backend/tests/: test_api.py  test_exporter.py  test_media_download.py  test_worker_proxy.py
diko/frontend/: index.html
diko/frontend/src/: App.tsx  index.css
diko/frontend/src/components/: DataCache.tsx  Dropdown.css  Dropdown.tsx  MediaDownloadContext.tsx
diko/frontend/src/pages/: LibraryPage.css  LibraryPage.tsx  SettingsPage.tsx  TranscribePage.css  TranscribePage.tsx
diko/scripts/: start-diko.sh
transkribas/: Makefile
transkribas/backend/: database.py  downloader.py  exporter.py  main.py  models.py  pyproject.toml  summarizer.py
transkribas/backend/tests/: test_captions.py  test_categorizer.py  test_database.py  test_media_download.py
transkribas/frontend/: package.json
transkribas/frontend/src/: App.css  App.tsx
transkribas/frontend/src/components/: Breadcrumb.css  Breadcrumb.tsx  DownloadModal.css  DownloadModal.tsx
transkribas/frontend/src/pages/: LibraryPage.css  LibraryPage.tsx  (+4 more)
transkribas/scripts/: start-diko.sh
