[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "onnxruntime<1.24",
    "sse-starlette>=3.3.4",
    "uvicorn>=0.42.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
